# cantrip

./: CHANGELOG.md  Cargo.toml  README.md  cog.toml  flake.nix  vhs.tape
.github/workflows/: main.yml  rust.yml  vhs.yml
src/: chat_backend.rs  chat_client.rs  chat_config.rs  chatroom.rs  cli.rs  command.rs  dice.rs  events.rs  main.rs  message.rs  secrets.rs  ticket.rs
src/chat/: app.rs  backend.rs  client.rs  config.rs  mod.rs  room.rs  state.rs
src/ui/: mod.rs  stdio.rs
src/ui/tui/: chatbox.rs  error_popup.rs  input.rs  inputbox.rs  mod.rs  model.rs  renderer.rs
