[package]
name = "cantrip"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
blake3 = "1.8.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.54", features = ["derive"] }
data-encoding = "2.10.0"
dialoguer = "0.12.0"
futures-lite = "2.6.1"
iroh = { version = "0.95.1", features = ["discovery-local-network"] }
iroh-gossip = "0.95.0"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
