[package]
name = "cantrip-vtt"
version = "0.1.0"
edition = "2024"
description = "A decentralized, terminal-based Virtual Tabletop (VTT) for RPGs, powered by Iroh."
authors = ["Michal Buchman"]
repository = "https://github.com/hafihaf123/cantrip"
license = "MIT OR Apache-2.0"
keywords = ["vtt", "rpg", "dnd", "p2p", "cli"]
categories = ["command-line-utilities", "games"]
readme = "README.md"

[[bin]]
name = "cantrip"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
base64 = "0.22.1"
blake3 = "1.8.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.54", features = ["derive"] }
dialoguer = "0.12.0"
futures-lite = "2.6.1"
iroh = { version = "0.95.1", features = ["discovery-local-network"] }
iroh-gossip = "0.95.0"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
